Scrollbar border radius fixed

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,14 +5,12 @@
 
 /* Track */
 ::-webkit-scrollbar-track {
-  border-radius: 10px;
   background-color: #f2effb;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
   background: #671d63;
-  border-radius: 10px;
 }
 
 /* Handle on hover */
